--- a/src/main.css
+++ b/src/main.css
@@ -42,6 +42,87 @@ html, body {
     height: 100%;
 }
 
+.landing {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding-top: 10rem;
+    padding-bottom: 5rem;
+}
+
+.logo img {
+  width: 150ch;
+  user-select: none;
+  pointer-events: none;
+}
+
+.boxes {
+    display: flex;
+    width: 100%;
+}
+
+.box {
+    text-decoration: none;
+    display: block;
+
+    height: 7.5rem;
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: 5px 5px 0px 0px var(--hacktober-pink);
+
+    padding: 10px;
+    padding-left: 20px;
+    width: 100%;
+}
+
+.box:not(:last-child) {
+    margin-right: 1.5rem;
+}
+
+.box-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-grow: 0;
+}
+
+.box:hover {
+    box-shadow: 5px 5px 0px 0px var(--hacktober-red);
+}
+
+.box-image {
+    display: flex;
+    align-items: center;
+    
+}
+
+.box-image {
+    width: 100px;
+}
+
+.box-image img {
+    width: 100px;
+}
+
+.box-details {
+    color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem;
+}
+
+.box-title {
+    color: var(--hacktober-dark-blue);
+    font-weight: bold;
+}
+
+.box-date {
+    color: var(--hacktober-red);
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
 .content {
     display: grid;
     grid-template-columns: minmax(1.2rem, 1fr) minmax(0, 110ch) minmax(1.2rem, 1fr);
