feat: adjusted paddings for several elements

--- a/src/main.css
+++ b/src/main.css
@@ -126,6 +126,7 @@ html, body {
 .content {
     display: grid;
     grid-template-columns: minmax(1.2rem, 1fr) minmax(0, 110ch) minmax(1.2rem, 1fr);
+    padding-bottom: 2rem;
 }
 
 .content > * {
@@ -137,7 +138,7 @@ html, body {
 }
 
 .repository:not(:first-child) {
-    padding-top: 2rem;
+    padding-top: 5rem;
 }
 
 .repository-title {
@@ -146,7 +147,7 @@ html, body {
 }
 
 .repository-title-image-parent {
-    padding: 13px;
+    padding: 23px;
     margin-right: 1.3rem;
     background-color: white;
     border-radius: 50%;
@@ -154,7 +155,7 @@ html, body {
 }
 
 .repository-title-image {
-    width: 90px;
+    width: 80px;
 }
 
 .repository-title > h4 {
@@ -170,8 +171,8 @@ html, body {
 .repository-topics {
     display: flex;
     flex-direction: row;
-    padding-top: 12px;
-    padding-bottom: 10px;
+    padding-top: 22px;
+    padding-bottom: 20px;
 }
 
 .repository-topics > span {
@@ -185,7 +186,7 @@ html, body {
 }
 
 .repository-topics > span:not(:last-child) {
-    margin-right: 8px;
+    margin-right: 10px;
 }
 
 .repository-description {
@@ -193,7 +194,7 @@ html, body {
 }
 
 .repository-maintainers h5 {
-    padding-top: 1rem;
+    padding-top: 1.75rem;
     padding-bottom: 0.5rem;
     font-size: 1.5rem;
     color: white;
@@ -241,7 +242,7 @@ html, body {
 }
 
 .issue {
-  padding-top: 1rem;
+  padding-top: 2rem;
   padding-left: 2rem;
 }
 
