Step into .NET 5 with initial new design

--- a/src/index.pug
+++ b/src/index.pug
@@ -76,17 +76,16 @@ html(lang="hu-HU")
     main
       .landing
         .logo
-          img(src="./assets/szakmai-css-munka.png")
 
       .content
         .boxes
-          a.box(href="https://www.facebook.com/events/333876941022112")
+          a.box(href="https://www.facebook.com/events/733812660672385/")
             .box-wrapper
               .box-image
                 img(src="./assets/facebook.png")
               .box-details
-                .box-title Step into Open Source // SiM 2020/10 // Hacktoberfest 2020
-                  .box-date 2020. 10. 26. 19:00
+                .box-title Step into .NET 5 // SiM 2021/01
+                  .box-date 2021. 01. 26. 19:00
           a.box(href="https://twitch.tv/stepintomeetups")
             .box-wrapper
               .box-image
