--- a/src/index.pug
+++ b/src/index.pug
@@ -79,13 +79,13 @@ html(lang="hu-HU")
 
       .content
         .boxes
-          a.box(href="https://www.facebook.com/events/733812660672385/")
+          a.box(href="https://www.facebook.com/events/707109983292413/")
             .box-wrapper
               .box-image
                 img(src="./assets/facebook.png")
               .box-details
-                .box-title Step into .NET 5 // SiM 2021/01
-                  .box-date 2021. 01. 26. 19:00
+                .box-title Step into Software Security // SiM 2021/03
+                  .box-date 2021. 03. 23. 19:00
           a.box(href="https://twitch.tv/stepintomeetups")
             .box-wrapper
               .box-image
